# netbox-qrgen

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  justfile  lefthook.yml  pyproject.toml  renovate.json  requirements.txt  sonar-project.properties
.woodpecker/: publish_release.yml  test_release.yml  tests.yml
development/: Dockerfile  config.env  docker-compose.yml
development/config/: configuration.py  logging.py  plugins.py
netbox_qrgen/: __init__.py  template_content.py  utils.py
netbox_qrgen/templates/netbox_qrgen/: qrgen.html
